--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:11.2.0'
     implementation 'com.google.android.gms:play-services-maps:11.2.0+'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
+    implementation 'me.dm7.barcodescanner:zxing:1.9.8'
 }
 
 apply plugin: 'com.google.gms.google-services'
