--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,13 @@
         <activity android:name=".LoginProgressDialog" />
         <activity android:name=".DisplayActivity" />
         <activity android:name=".TrackerActivity"></activity>
-    </application>
+
+    <service
+        android:name=".TrackerService"
+        android:enabled="true"
+        android:exported="true">
+    </service>
+
+</application>
 
 </manifest>
