--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:11.2.0+'
     implementation 'androidmads.library.qrgenearator:QRGenearator:1.0.3'
     implementation 'me.dm7.barcodescanner:zxing:1.9.8'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.5.3'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.5.3'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.5.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
